2009-11-01  John W. Eaton  <jwe@octave.org>

	* data.cc (get_sort_mode_option): New function.
	(Fissorted): Handle ascending or descending option.

2009-11-01  John W. Eaton  <jwe@octave.org>

	* load-path.cc (load_path::dir_info::update): Always initialize
	relative directories that are not yet included in abs_dir_cache.

2009-10-29  John W. Eaton  <jwe@octave.org>

	* parse.y (finish_function): Return function object unless parsing
	function file.

2009-10-23  Jaroslav Hajek  <highegg@gmail.com>

	* DLD-FUNCTIONS/tril.cc: New source.
	* Makefile.in: Include it.

2009-10-22  Jaroslav Hajek  <highegg@gmail.com>

	* error.cc (verror (bool, std::ostream&, ..., bool)): Add optional
	with_cfn flag. If specified, prepend current function name (unless
	already there).
	(error_1): Accept with_cfn flag and pass it on.
	(error_2): Ditto.
	(verror_with_cfn, error_with_cfn, error_with_id_cfn,
	verror_with_id_cfn): New functions.
	* error.h: Declare them.
	* octave.cc (lo_error_handler): Call verror_with_cfn.
	* ov-base.cc (INT_CONV_METHOD): Call error_with_cfn.
	* ov.cc (octave_value::int_vector_value,
	octave_idx_type_vector_value): Call error_with_cfn.

2009-10-21  Rik <octave@nomad.inbox5.com>

	* variables.cc: Correct use of deftypefnx for who and whos

2009-10-21  John W. Eaton  <jwe@octave.org>

	* load-path.h (load_path::dir_path::dir_time_last_checked): New field.
	(load_path::dir_path::dir_path, load_path::dir_path::operator=):
	Initialize and copy dir_time_last_checked.
	* load-path.cc 	(load_path::dir_info::initialize): Store time of
	last update.
	(load_path::dir_info::update): Check directory modification time
	against time of last update, within resolution of filesystem time
	stamps.  Suggested by Judd Storrs <storrsjm@email.uc.edu>.

2009-10-20  Jaroslav Hajek  <highegg@gmail.com>

	* ov-base.h (builtin_type_t): Declare also btyp_num_types.
	* DLD-FUNCTIONS/bsxfun.cc (bsxfun_builtin_op): New enum.
	(bsxfun_handler): New typedef.